Bug 375135 - segfault on viewing html files with Generic viewer
Summary: segfault on viewing html files with Generic viewer
Status: RESOLVED FIXED
Alias: None
Product: krusader
Classification: Applications
Component: krviewer (other bugs)
Version First Reported In: 2.5.0
Platform: Arch Linux Linux
: NOR crash
Target Milestone: ---
Assignee: Krusader Bugs Distribution List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-01-16 13:31 UTC by Andrew Gaydenko
Modified: 2020-05-03 10:59 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Andrew Gaydenko 2017-01-16 13:31:08 UTC
Hi!
Manjaro Linux (Arch-based) is in use. On opening of any file.html with Generic viewer Krusader crashes. Say:

~ $ krusader
Trying to convert empty KLocalizedString to QString.
Qt WebEngine seems to be initialized from a plugin. Please set Qt::AA_ShareOpenGLContexts using QCoreApplication::setAttribute before constructing QGuiApplication.
PanelViewer(0x2067c50) PanelViewer(0x2067c50)
WebEngineContext used before QtWebEngine::initialize() or OpenGL context creation failed.
QUrl("file:///path/to/some.html")
Segmentation fault (core dumped)

~ $ cat /wrk/z/rrr/1.html
<!DOCTYPE html>
<html></html>
Comment 1 Alex Bikadorov 2017-01-16 15:40:53 UTC
Cannot reproduce. No crash when opening "1.html" file containing
><!DOCTYPE html>
><html></html>
in default viewer with F3 key.

Only one line output when closing the viewer:
>"16:39:51.688#unknown@0 ### 0x2c475e8 deleted without having been removed from the factory first. This will leak standalone popupmenus and could lead to crashes."
Comment 2 Martin Kostolný 2017-01-16 21:05:44 UTC
I actually can reproduce it and found this related bug:
https://bugreports.qt.io/browse/QTCREATORBUG-17296 pointing to a fix:
https://codereview.qt-project.org/#/c/177163/2/src/app/main.cpp

...which actually works for Krusader, too. Patching now.
Comment 3 Martin Kostolný 2017-01-16 21:07:27 UTC
Git commit e8c4f66b1a4eb375c585a4e6bdd8bbc3ce1aa8f8 by Martin Kostolný.
Committed on 16/01/2017 at 21:06.
Pushed by martinkostolny into branch 'master'.

FIXED: [ 375135 ] segfault on viewing html files with Generic viewer

M  +2    -0    krusader/main.cpp

https://commits.kde.org/krusader/e8c4f66b1a4eb375c585a4e6bdd8bbc3ce1aa8f8
Comment 4 Andrew Gaydenko 2017-01-17 04:49:44 UTC
Thanks! - verified.