FIXED: [ 375135 ] segfault on viewing html files with Generic viewer

BUG: 375135